Ativando Dark Mode e imagens

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <p>
                         <strong>Backend Developer 🐍</strong><br>
                         & Gestor de Tráfego<br>
-                        <span style="font-size: 0.8em; color: #ccc;">Primus Bank</span>
+                        <span style="font-size: 0.8em; color: #ccc;"></span>
                     </p>
                 </div>
                 
@@ -34,8 +34,8 @@
 
                 <section id="one">
                         <header class="major">
-                            <h2>Transformando dados de tráfego<br />
-                            em arquitetura de software escalável.</h2>
+                            <h2 style="color: #aeaeae;">Desenvolvimento Backend de Alta Performance<br />
+                            focado em Inteligência de Dados.</h2>
                         </header>
                         <p>
                             Olá! Eu sou o Eduardo. Atuo na intersecção entre <strong>Desenvolvimento Backend</strong> e <strong>Performance Digital</strong>. 
